--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -423,8 +423,19 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="g-cols wpb_row offset_wide">
                         <div class="two-thirds">
-                            <div id="gallery_737980" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 421px;"><a class="w-gallery-tnail order_1" href="resources/566bf031a6540_1Home1.png" title="566bf031a6540_1Home[1]" style="opacity: 1; position: absolute; left: 0px; top: 0px;"><img width="600" height="338" src="resources/566bf031a6540_1Home1-600x338.png" class="w-gallery-tnail-img" alt="566bf031a6540_1Home[1]"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_2" href="resources/566bf03a8a23f_2Continue1.png" title="566bf03a8a23f_2Continue[1]" style="opacity: 1; position: absolute; left: 370px; top: 0px;"><img width="600" height="338" src="resources/566bf03a8a23f_2Continue1-600x338.png" class="w-gallery-tnail-img" alt="566bf03a8a23f_2Continue[1]"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_3" href="resources/566bf043ec9ff_4Movies1.png" title="566bf043ec9ff_4Movies[1]" style="opacity: 1; position: absolute; left: 0px; top: 211px;"><img width="600" height="337" src="resources/566bf043ec9ff_4Movies1-600x337.png" class="w-gallery-tnail-img" alt="566bf043ec9ff_4Movies[1]"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_4" href="resources/566bf04d2a378_5Trailer1.png" title="566bf04d2a378_5Trailer[1]" style="opacity: 1; position: absolute; left: 370px; top: 211px;"><img width="600" height="337" src="resources/566bf04d2a378_5Trailer1-600x337.png" class="w-gallery-tnail-img" alt="566bf04d2a378_5Trailer[1]"><span class="w-gallery-tnail-title"></span></a></div> </div>
-                        </div><div class="one-third">
+                            <div class="wpb_text_column ">
+                                <div class="wpb_wrapper">
+
+                                    <h2>What you want to watch – right up front</h2>
+                                    <p>Designed with with typical usage in mind, you won’t have to go hunting through your library to find the content you are most likely wanting to watch right now. The home screen shows you the items you were watching but hadn’t finished, your latest un-watched movies, the next episode of all your current TV shows and what’s on Live TV right now.</p>
+                                    <p>
+                                        <img src="resources/1.png">
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="one-third">
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
                                     <p>
@@ -436,7 +447,8 @@
                                 <p>Emby is available for download and installation on your Samsung Smart TV.</p>
                                 <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2015 & 2016 Models</div>
                                 <p>Users in the USA can install Emby in Samsung App Store.</p>
-                                <p>All other users can run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a></p>
+                                <p>All other users can run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a>
+                                </p>
                                 <div>
                                     <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
@@ -451,7 +463,67 @@
                                 </div>
                             </div>
                         </div>
-                    </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    </div>
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="full-width">
+                            <div class="wpb_text_column ">
+                                <div class="wpb_wrapper">
+
+                                    <h2 style="margin-top: 1em;">Fast, easy browsing</h2>
+                                    <p>For those times you do want to peruse your library, Emby Theater makes it a breeze. Providing several ways to traverse your content and rich search capability, you’ll find what you’re looking for in no time.</p>
+                                    <div id="gallery_408676" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid">
+                                        <div class="w-gallery-tnails" style="position: relative; height: 711px;">
+                                            <a class="w-gallery-tnail order_1 animate_reveal" href="resources/theater14.png" title="atv1" style="position: absolute; left: 0px; top: 0px;"><img width="600" height="371" src="resources/theater14.png" class="w-gallery-tnail-img" alt="atv1"><span class="w-gallery-tnail-title"></span></a>
+                                            <a class="w-gallery-tnail order_2 animate_reveal" href="resources/2.png" title="atv2" style="position: absolute; left: 572px; top: 0px;"><img width="600" height="372" src="resources/2.png" class="w-gallery-tnail-img" alt="atv2"><span class="w-gallery-tnail-title"></span></a>
+                                            <a class="w-gallery-tnail order_3 animate_reveal" href="resources/5.png" title="atv3" style="position: absolute; left: 0px; top: 355px;"><img width="600" height="372" src="resources/5.png" class="w-gallery-tnail-img" alt="atv3"><span class="w-gallery-tnail-title"></span></a>
+                                            <a class="w-gallery-tnail order_4 animate_reveal" href="resources/6.png" title="atv4" style="position: absolute; left: 572px; top: 356px;"><img width="600" height="371" src="resources/6.png" class="w-gallery-tnail-img" alt="atv4"><span class="w-gallery-tnail-title"></span></a>
+                                        </div>
+                                    </div>
+
+                                    <h2 style="margin-top: 1em;">Rediscover your content</h2>
+                                    <p>Emby Theater also uses the power of the server to help you find movies to watch for the first time or over and over.</p>
+                                    <p>
+                                        <img src="resources/9.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">The Best Way to Watch Live TV</h2>
+                                    <p>The Emby Live TV Guide helps you find what you're looking for quickly and easily.</p>
+                                    <p>
+                                        <img src="resources/theater13.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Fast Channel Changing</h2>
+                                    <p>In-video controls make for fast and easy channel changing.</p>
+                                    <p>
+                                        <img src="resources/atv10.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Never Miss a Show with Emby DVR</h2>
+                                    <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
+                                    <p>
+                                        <img src="resources/atv11.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">A Beautiful Way to Play Your Music</h2>
+                                    <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
+                                    <p>
+                                        <img src="resources/10.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Easy Now Playing Queue</h2>
+                                    <p>The app features a beautiful graphical interface that allows you to quickly move within your playlists.</p>
+                                    <p>
+                                        <img src="resources/theater12.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">The next of a new generation</h2>
+                                    <p>The new Emby Theater app is another in our new generation of more intelligent apps for all your devices. Designed more like the web app, Emby Theater continues our commitment to make Emby the absolute best solution for your personal media collection.</p>
+                                    <p>
+                                        <img src="resources/4.png">
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                 </div>
             </div>
         </div>
