--- a/src/index.html
+++ b/src/index.html
@@ -407,7 +407,7 @@
                                 </span>
                             </div><div class="vc_custom_heading">
                                 <h2 style="font-size: 56px;line-height: 66px;text-align: center;font-family:Roboto;font-weight:100;font-style:normal">
-                                    TAKE YOUR HOME<br>
+                                    TAKE YOUR<br>
                                     <strong>MEDIA ANYWHERE</strong><br>
                                     WITH EMBY
                                 </h2>
