--- a/src/premiere.html
+++ b/src/premiere.html
@@ -634,7 +634,7 @@
                                     <div class="aio-icon-header">
                                         <h3 class="aio-icon-title" style="">Free Apps</h3>
                                     </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Enjoy full access to Emby for Android, Fire TV, iOS, and Emby Theater.</div> <!-- description -->
+                                    <div class="aio-icon-description" style="">Enjoy full access to Emby for Android, Fire TV, iOS, Xbox One and PS4.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
