--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -497,12 +497,21 @@
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Lifetime</h3>
+                                        <h3 class="aio-icon-title" style="">1000 Devices Monthly</h3>
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            Contact Us<br>
+                                            $219/Each Month (recurring)<br>
                                         </p>
+                                        <div class="vc_wp_text wpb_content_element">
+                                            <div class="widget widget_text">
+                                                <div class="textwidget">
+                                                    <p>
+                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MBVUPKBZ2TF6J"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
@@ -810,12 +819,21 @@
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Lifetime</h3>
+                                        <h3 class="aio-icon-title" style="">1000 Devices Monthly</h3>
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            Contact Us<br>
+                                            $219/Each Month (recurring)<br>
                                         </p>
+                                        <div class="vc_wp_text wpb_content_element">
+                                            <div class="widget widget_text">
+                                                <div class="textwidget">
+                                                    <p>
+                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MBVUPKBZ2TF6J"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
