--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Emby Premiere - Emby</title>
     <meta name="description" content="Emby Premiere premium features">
+    {SOCIALNETWORKS}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
@@ -449,6 +450,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CV9RHF7RMUDAN"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Monthly" data-amount="1999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere100Monthly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="1999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -471,7 +481,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $199.99/1 Year<br>
+                                            $199.99/Each Year (recurring)<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -479,6 +489,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=QFY7LX6B48NMU"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Yearly" data-amount="19999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere100Yearly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="19999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -501,7 +520,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $219/Each Month (recurring)<br>
+                                            $219.99/Each Month (recurring)<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -509,6 +528,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MBVUPKBZ2TF6J"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 1000 Monthly" data-amount="21999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere1000Monthly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="21999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -771,6 +799,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CV9RHF7RMUDAN"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Monthly" data-amount="1999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere100Monthly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="1999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -793,7 +830,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $199.99/Anually (recurring)<br>
+                                            $199.99/Each Year (recurring)<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -801,6 +838,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=QFY7LX6B48NMU"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Yearly" data-amount="19999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere100Yearly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="19999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -823,7 +869,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $219/Each Month (recurring)<br>
+                                            $219.99/Each Month (recurring)<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -831,6 +877,15 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MBVUPKBZ2TF6J"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
+                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 1000 Monthly" data-amount="21999" data-locale="auto" data-zip-code="true">
+                                                            // <![CDATA[
+
+                                                            // ]]></script>
+                                                        <input name="feature" type="hidden" value="Premiere1000Monthly" />
+                                                        <input name="origin" type="hidden" value="website" />
+                                                        <input name="amount" type="hidden" value="21999" />
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
