--- a/src/thank-you.html
+++ b/src/thank-you.html
@@ -407,7 +407,7 @@
             <div class="l-submain wpb_row">
                 <div class="l-submain-h g-html i-cf">
                     <h3>Thank you for your support</h3>
-                    <p>You will receive a supporter key via email shortly. &nbsp;Copy and paste this key into the field in the Emby Server dashboard under <strong>Help&nbsp;-&gt;&nbsp;Supporter Key</strong> and start enjoying all the additional benefits that come with Emby Premiere.</p>
+                    <p>You will receive your Emby Premiere key via email shortly. If you used PayPal, it will be sent to the primary email on that account. Otherwise, it will be sent to the email you provided at check out. &nbsp;Copy and paste this key into the field in the Emby Server dashboard under <strong>Emby Premiere</strong> and start enjoying all the additional benefits that come with Emby Premiere.</p>
                     <p>Thanks again and enjoy your media.</p>
                 </div>
             </div>
