Update Roku beta link

--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -441,7 +441,7 @@
 
                                     <h4>Try the Beta Preview of the new Emby for Roku App</h4>
                                     <div style="margin-top:1em;">
-                                        The preview of our brand new modern interface Roku app can be installed as a <a href="https://my.roku.com/add/JMP2HD9" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
+                                        The preview of our brand new modern interface Roku app can be installed as a <a href="https://my.roku.com/add/EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
                                     </div>
 
                                 </div>
