--- a/src/premiere.html
+++ b/src/premiere.html
@@ -592,22 +592,48 @@
                                                 <img class="img-icon" alt="" src="resources/mobilesync.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Mobile Sync</h3></div> <!-- header --><div class="aio-icon-description" style="">Sync your media to your smart phones and tablets for easy offline access. Supported for Windows 8.1. Coming to Android, iOS and Windows Phone in a future release.</div> <!-- description -->
+                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Offine Media</h3></div> <!-- header --><div class="aio-icon-description" style="">Download your media to your smart phones and tablets for easy offline playback. Supported on Android and Windows. Coming soon to iOS.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
-                        </div><div class="one-third">
+                        </div>
+                        <div class="one-third">
                             <div class="aio-icon-component   style_2">
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
                                         <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img " style="font-size:160px;display:inline-block;">
-                                                <img class="img-icon" alt="" src="resources/cloudsync.png">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/etdvr.png" style="border-radius: 1000px!important;">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Cloud Sync</h3></div> <!-- header --><div class="aio-icon-description" style="">Sync your media to the cloud for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
+                                    </div>
+                                    <div class="aio-icon-header">
+                                        <h3 class="aio-icon-title" style="">Emby DVR</h3>
+                                    </div> <!-- header -->
+                                    <div class="aio-icon-description" style="">Schedule individual recordings, series recordings, and more with Emby DVR.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
-                        </div><div class="one-third">
+                        </div>
+                        <div class="one-third">
+                            <div class="aio-icon-component   style_2">
+                                <div class="aio-icon-box top-icon" style="">
+                                    <div class="aio-icon-top">
+                                        <div class="ult-just-icon-wrapper ">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/tvdonate1.png">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="aio-icon-header">
+                                        <h3 class="aio-icon-title" style="">Free Apps</h3>
+                                    </div> <!-- header -->
+                                    <div class="aio-icon-description" style="">Enjoy full access to Emby for Android, Fire TV, iOS, Xbox One and PS4.</div> <!-- description -->
+                                </div> <!-- aio-icon-box -->
+                            </div> <!-- aio-icon-component -->
+                        </div>
+                    </div><!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="one-third">
                             <div class="aio-icon-component   style_2">
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
@@ -620,24 +646,7 @@
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
-                    </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide">
-                        <div class="one-third">
-                            <div class="aio-icon-component   style_2">
-                                <div class="aio-icon-box top-icon" style="">
-                                    <div class="aio-icon-top">
-                                        <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img " style="font-size:160px;display:inline-block;">
-                                                <img class="img-icon" alt="" src="resources/tvdonate1.png">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Free Apps</h3>
-                                    </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Enjoy full access to Emby for Android, Fire TV, iOS, Xbox One and PS4.</div> <!-- description -->
-                                </div> <!-- aio-icon-box -->
-                            </div> <!-- aio-icon-component -->
-                        </div>
+
                         <div class="one-third">
                             <div class="aio-icon-component   style_2">
                                 <div class="aio-icon-box top-icon" style="">
@@ -660,15 +669,20 @@
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
                                         <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img " style="font-size:160px;display:inline-block;">
-                                                <img class="img-icon" alt="" src="resources/foldersync.png">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/cloudsync.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Folder Sync</h3></div> <!-- header --><div class="aio-icon-description" style="">Sync your media to folders and external hard drives for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
+                                    </div>
+                                    <div class="aio-icon-header">
+                                        <h3 class="aio-icon-title" style="">Cloud Sync</h3>
+                                    </div> <!-- header -->
+                                    <div class="aio-icon-description" style="">Sync your media to the cloud for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
-                    </div><!-- Row Backgrounds -->
+                    </div>
+                    <!-- Row Backgrounds -->
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
                     <div class="g-cols wpb_row offset_wide">
                         <div class="one-third">
@@ -710,15 +724,15 @@
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
                                         <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img" style="font-size: 160px; display: inline-block;">
-                                                <img class="img-icon" alt="" src="resources/rt.png">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/foldersync.png">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Rotten Tomatoes</h3>
+                                        <h3 class="aio-icon-title" style="">Folder Sync</h3>
                                     </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">The most trusted reviews on the web.</div> <!-- description -->
+                                    <div class="aio-icon-description" style="">Sync your media to folders and external hard drives for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
