--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -447,8 +447,6 @@
                                 <p>Emby is available for download and installation on your Samsung Smart TV.</p>
                                 <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2015 & 2016 Models</div>
                                 <p>Users in the USA can install Emby in Samsung App Store.</p>
-                                <p>All other users can run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a>
-                                </p>
                                 <div>
                                     <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
@@ -500,7 +498,17 @@
                                     <h2 style="margin-top: 1em;">Never Miss a Show with Emby DVR</h2>
                                     <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
                                     <p>
-                                        <img src="resources/atv11.png">
+                                        <img src="resources/theaterlivetv3.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Easily Schedule DVR Recordings</h2>
+                                    <p>Starting a recording requires only a single button click, whether it's ahead of time or while watching the live program.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv4.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Fast Access to Your Latest Recordings</h2>
+                                    <p>Recordings are organized in a beautiful, intuitive display to help you get the most out of your Emby DVR experience.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv2.png">
                                     </p>
                                     <h2 style="margin-top: 1em;">A Beautiful Way to Play Your Music</h2>
                                     <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
