--- a/src/emby-theater-xboxone.html
+++ b/src/emby-theater-xboxone.html
@@ -431,16 +431,20 @@
                                 <div class="wpb_wrapper">
 
                                     <h2>Download Now</h2>
-                                    <p>Install in the <a href="https://www.microsoft.com/en-us/store/p/emby-theater/9nblggh4t70l" target="_blank">Microsoft Windows Store</a>.
+                                    <p>
+                                        Install in the <a href="https://www.microsoft.com/en-us/store/p/emby-theater/9nblggh4t70l" target="_blank">Microsoft Windows Store</a>.
                                     </p>
-                                    <p style="margin-top: 2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
+                                    <p style="margin-top: 2em;">
+                                        Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
                                     </p>
 
                                     <h2>Also Runs in Your Browser</h2>
-                                    <p>Just open your web browser and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.
+                                    <p>
+                                        Just open your web browser and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.
                                     </p>
                                     <p>Turn Emby Theater into an app by adding it to your home screen. Emby Theater supports your Xbox One game controller for easy navigation.</p>
-                                    <p style="margin-top: 2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
+                                    <p style="margin-top: 2em;">
+                                        Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
                                     </p>
                                 </div>
                             </div>
@@ -482,7 +486,17 @@
                                     <h2 style="margin-top: 1em;">Never Miss a Show with Emby DVR</h2>
                                     <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
                                     <p>
-                                        <img src="resources/atv11.png">
+                                        <img src="resources/theaterlivetv3.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Easily Schedule DVR Recordings</h2>
+                                    <p>Starting a recording requires only a single button click, whether it's ahead of time or while watching the live program.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv4.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Fast Access to Your Latest Recordings</h2>
+                                    <p>Recordings are organized in a beautiful, intuitive display to help you get the most out of your Emby DVR experience.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv2.png">
                                     </p>
                                     <h2 style="margin-top: 1em;">A Beautiful Way to Play Your Music</h2>
                                     <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
