--- a/src/emby-theater.html
+++ b/src/emby-theater.html
@@ -488,7 +488,17 @@
                                     <h2 style="margin-top: 1em;">Never Miss a Show with Emby DVR</h2>
                                     <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
                                     <p>
-                                        <img src="resources/atv11.png">
+                                        <img src="resources/theaterlivetv3.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Easily Schedule DVR Recordings</h2>
+                                    <p>Starting a recording requires only a single button click, whether it's ahead of time or while watching the live program.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv4.png">
+                                    </p>
+                                    <h2 style="margin-top: 1em;">Fast Access to Your Latest Recordings</h2>
+                                    <p>Recordings are organized in a beautiful, intuitive display to help you get the most out of your Emby DVR experience.</p>
+                                    <p>
+                                        <img src="resources/theaterlivetv2.png">
                                     </p>
                                     <h2 style="margin-top: 1em;">A Beautiful Way to Play Your Music</h2>
                                     <p>Easily play your favorite music albums, artists, genres, or instant mixes.</p>
