--- a/src/blogpost.html
+++ b/src/blogpost.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Article" class="no-touch js csstransitions" lang="en-US">
-<head>
+<html prefix="og: http://ogp.me/ns#" class="no-touch js csstransitions" lang="en-US">
+<head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>{{articleTitle}}</title>
