--- a/src/blog.html
+++ b/src/blog.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0028)https://emby.media/download/ -->
-<html itemscope itemtype="http://schema.org/Article" class="no-touch js csstransitions" lang="en-US">
-<head>
+<html prefix="og: http://ogp.me/ns#" class="no-touch js csstransitions" lang="en-US">
+<head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
