--- a/src/emby-for-fire-tv.html
+++ b/src/emby-for-fire-tv.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0046)https://emby.media/downloads/emby-for-fire-tv/ -->
-<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
-<head>
+<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Amazon Fire TV - Emby</title>
