--- a/src/emby-for-xbox-360.html
+++ b/src/emby-for-xbox-360.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0047)emby-for-xbox-360.html -->
-<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
-<head>
+<html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
+<head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Xbox 360 - Emby</title>
