--- a/src/socialnetworks.html
+++ b/src/socialnetworks.html
@@ -13,18 +13,19 @@
 <meta name="twitter:image:src" content="{{largeImageUrl}}">
 
 <!-- Pinterest -->
-<meta name="p:domain_verify" content="cc2890d97a2653d9254ab08a2d1ac89f" />
+<meta name="p:domain_verify" content="cc2890d97a2653d9254ab08a2d1ac89f" >
 
 <!-- Open Graph data -->
-<meta property="og:title" content="{{articleTitle}}" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="http://emby.media" />
-<meta property="og:image" content="{{imageUrl}}" />
-<meta property="og:description" content="{{description}}" />
-<meta property="og:site_name" content="Emby" />
-<meta property="article:published_time" content="{{pubDate}}" />
-<meta property="article:modified_time" content="{{modifyDate}}" />
-<meta property="article:section" content="Article Section" />
-<meta property="article:tag" content="Article Tag" />
-<meta property="fb:admins" content="1618309211750238"/>
-<meta property="fb:app_id" content="1618309211750238"/>
+<meta property="og:title" itemprop="name" content="{{articleTitle}}" >
+<meta property="og:type" content="website" >
+<meta property="og:url" content="http://emby.media">
+<link itemprop="image" href="{{imageUrl}}">
+<meta property="og:image" content="{{imageUrl}}" >
+<meta property="og:description" itemprop="description" content="{{description}}" >
+<meta property="og:site_name" content="Emby" >
+<meta property="article:published_time" content="{{pubDate}}" >
+<meta property="article:modified_time" content="{{modifyDate}}" >
+<meta property="article:section" content="Article Section" >
+<meta property="article:tag" content="Article Tag" >
+<meta property="fb:admins" content="1618309211750238">
+<meta property="fb:app_id" content="1618309211750238">
