--- a/src/premiere.html
+++ b/src/premiere.html
@@ -592,7 +592,7 @@
                                                 <img class="img-icon" alt="" src="resources/mobilesync.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Offine Media</h3></div> <!-- header --><div class="aio-icon-description" style="">Download your media to your smart phones and tablets for easy offline playback. Supported on Android and Windows. Coming soon to iOS.</div> <!-- description -->
+                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Offline Media</h3></div> <!-- header --><div class="aio-icon-description" style="">Download your media to your smart phones and tablets for easy offline playback. Supported on Android and Windows. Coming soon to iOS.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
